# hypermodern-python-tooling

./: .gitignore  .pre-commit-config.yaml  dev-requirements.txt  pyproject.toml  requirements.txt  setup.sh  tests-requirements.txt
ch10/: static_checker.py  type_annotation.py
ch2/: env.py
ch3/: package.py  pyproject.toml  random_wikipedia_article.py
ch4/: dependency.py  pyproject.toml  random_wikipedia_article.py
ch6/: random_wikipedia_article.py
ch7/: code_coverage.py
ch9/: formatter.py  lint.py  linter.py  pre-commit.py
common/: assert_utils.py
tests/ch5/: test_random_wiki.py
