[project]
name = "hypermodern-python-tooling"
version = "0.1.0"
description = "Example code of 'Hypermodern Python Tooling'"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "hatchling>=1.27.0",
    "httpx[http2]>=0.28.1",
    "importlib-metadata>=8.7.0",
    "pydantic>=2.11.9",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "pytest>=8.4.1",
    "pytest-factoryboy>=2.8.1",
    "pytest-httpserver>=1.1.3",
    "pytest-icdiff>=0.9",
    "pytest-sugar >= 1.1.1",
    "sphinx>=5.3.0",
]

[tool.coverage.run]
source = ["ch5", "tests"] # 要检查覆盖率的源码所在的文件夹
omit = ["*/__init__.py"] # 要忽略的文件
branch =  true # 是否分析分支覆盖率

[tool.coverage.report]
show_missing = true # 报告中显示没有覆盖的行号
fail_under = 100 # 覆盖率低于某个值则fail

[tool.ruff.lint]
select = ["D", "E", "F"]
ignore = ["D100","D103","E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Tests can use assertions.
