[project]
name = "random-wikipedia-article"
version = "0.1"
dependencies = [
    "httpx>=0.28.1",
    "httpx[http2]>=0.28.1",
    "pytest>=8.4.1",
    "rich>=14.1.0",
]

[project.scripts]
random-wikipedia-article = "random_wikipedia_article:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
